[package]
name = "mqtt-aquarium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
hidapi = "1.4"
pretty_env_logger = "0.4"
log = "0.4"
rumqttc = "0.11"
tokio = { version = "1.17", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
